--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,41 @@ header h1 {
     opacity: 0.7;
     height: 20%;
     top: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    height: 80%;
 }
 
 main {
     display: flex;
     flex-direction: column;
+    font-family: Verdana, sans-serif;
+}
+
+main div {
+    padding: 30px;
+}
+
+#top {
+    font-weight: bold;
+}
+
+#middle {
+    color: grey;
+}
+
+#middle p {
+    color: black;
+    font-weight: bold;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 button {
@@ -35,4 +65,13 @@ button {
 
 input {
     border-color: #E5E7EB;
+}
+
+:invalid {
+    border: red;
+}
+
+:focus {
+    border: blue;
+    box-shadow: 1px 1px grey;
 }
